# fgpg

./: CMakeLists.txt  LICENSE  README.md  package.xml
cmake/: FindFCL.cmake
config/: options.yaml
include/fgpg/: calc_area.h  fcl_eigen_utils.h  fcl_utils.h  geometrics.h  grap_data.h  grasp_coverage_evaluator.h  grasp_point_generator.h  hsv2rgb.h  mesh_sampling.h  triangle_plane_data.h  vtk_mesh_utils.h  yaml_config.h
script/: assembly_cont.yaml  cont_reader.h  cont_reader.py
src/: evaluator.cpp  fgpg.cpp  geometrics.cpp  grasp_coverage_evaluator.cpp  grasp_point_generator.cpp  hsv2rgb.cpp  mesh_sampling.cpp
